[lworld] C2 compilation fails with assert(EnableValhalla) failed: should only be used for inline types

XMLWordPrintable

      Current CompileTask:
      C2: 60130 11932 b 4 com.sun.tools.javac.comp.Check::checkDefaultConstructor (267 bytes)

      Stack: [0x00007f61f1eff000,0x00007f61f2000000], sp=0x00007f61f1ffcac0, free space=1014k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x1533963] AndLNode::Identity(PhaseGVN*)+0x773
      V [libjvm.so+0x167e8f1] PhaseGVN::transform_no_reclaim(Node*)+0x251
      V [libjvm.so+0x16511a8] Parse::do_one_bytecode()+0x2988
      V [libjvm.so+0x1634e88] Parse::do_one_block()+0x818
      V [libjvm.so+0x1635daa] Parse::do_all_blocks()+0x12a
      V [libjvm.so+0x163aeaa] Parse::Parse(JVMState*, ciMethod*, float)+0xe6a
      V [libjvm.so+0x855745] ParseGenerator::generate(JVMState*)+0x115
      V [libjvm.so+0xa28583] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, bool, DirectiveSet*)+0x1153
      V [libjvm.so+0x8528fc] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x1dc
      V [libjvm.so+0xa38d90] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xca0
      V [libjvm.so+0xa39898] CompileBroker::compiler_thread_loop()+0x5a8
      V [libjvm.so+0x191e2a6] JavaThread::thread_main_inner()+0x256
      V [libjvm.so+0x1924f60] Thread::call_run()+0x100
      V [libjvm.so+0x15efff6] thread_native_entry(Thread*)+0x116

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: