8256391: [lworld] C2 compilation fails with assert(EnableValhalla) failed: should only be used for inline types