src/hotspot/share/opto/mulnode.cpp
@@ -603,11 +603,12 @@ Node* AndLNode::Identity(PhaseGVN* phase) {
       }
     }
 
-    if (con == markWord::inline_type_pattern) {
+    // Check if this is part of an inline type test
+    if (con == markWord::inline_type_pattern && in(1)->is_Load() &&
+        phase->type(in(1)->in(MemNode::Address))->is_ptr()->offset() == oopDesc::mark_offset_in_bytes() &&
+        phase->type(in(1)->in(MemNode::Address))->is_inlinetypeptr()) {
       assert(EnableValhalla, "should only be used for inline types");
-      if (in(1)->is_Load() && phase->type(in(1)->in(MemNode::Address))->is_inlinetypeptr()) {
-        return in(2); // Obj is known to be an inline type
-      }
+      return in(2); // Obj is known to be an inline type
     }
   }
   return MulNode::Identity(phase);
